# traingame

./: .gitignore  CMakeLists.txt  Clothoid.h  ClothoidChain.h  ControlMode.cpp  ControlMode.h  Fresnel.h  Gauge.h  GaugeDataStore.cpp  GaugeDataStore.h  JsonDataStore.h  NavigateMode.cpp  NavigateMode.h  RailProfile.h  RailProfileDataStore.cpp  RailProfileDataStore.h  RailProfileSimple.h  Railway.cpp  Railway.h  RailwayGL.cpp  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  RendererOpenGL.cpp  RendererOpenGL.h  TODO  TrackMode.cpp  TrackMode.h  TrackModeGL.cpp  TrackNode.cpp  TrackNode.h  TrackPosition.cpp  TrackPosition.h  TrackSection.cpp  TrackSection.h  TrackSectionGL.cpp  TrackSpec.cpp  TrackSpec.h  Train.cpp  (+21 more)
data/gauge/: standard.json
data/rail_profile/: vignole.json
maths/: Line.h  Matrix.h  Plane.h  TemplateMaths.h  Vector.h
util/: arch.h  assert.h  compiler.h  macro_streams.h
